--- a/SubEthaEdit-Mac/Documentation/SyntaxScopes/js/ScopeExamples.plist
+++ b/SubEthaEdit-Mac/Documentation/SyntaxScopes/js/ScopeExamples.plist
@@ -12,30 +12,30 @@
     <string>http://apple.com www.panic.com</string>
     <key>meta.link.email</key>
     <string>steve@apple.com</string>
-    <key>comment.line</key>
-    <string>// comment</string>
     <key>comment.block</key>
     <string>/* Comment */</string>
     <key>comment.block.documentation</key>
     <string>/*" Autodoc Comment "*/</string>
+    <key>comment.line</key>
+    <string>// comment</string>
+    <key>keyword.constant</key>
+    <string>NaN Infinity true false</string>
     <key>keyword.control</key>
     <string>if else class new do while</string>
     <key>keyword.type</key>
     <string>byte float char void double</string>
-    <key>language.function</key>
-    <string>my_function_call()</string>
-    <key>constant.numeric</key>
+    <key>language.constant.numeric</key>
     <string>0 15 0x4a 0713 3.14</string>
-    <key>constant.numeric.keyword</key>
-    <string>NaN Infinity true false</string>
-    <key>string.single</key>
-    <string>'lorem ipsum'</string>
+    <key>language.subroutine.function</key>
+    <string>my_function_call()</string>
     <key>string.double</key>
     <string>"lorem ipsum"</string>
-    <key>string.regex</key>
-    <string>/([^ a-zA-Z0-9_.-]+)/n</string>
     <key>string.exec</key>
     <string>%x{ls -l}</string>
+    <key>string.regex</key>
+    <string>/([^ a-zA-Z0-9_.-]+)/n</string>
+    <key>string.single</key>
+    <string>'lorem ipsum'</string>
     <key>support.class.standard</key>
     <string>Object String Array Math</string>
   </dict>
