--- a/SubEthaEdit-Mac/Documentation/SyntaxScopes/php/ScopeExamples.plist
+++ b/SubEthaEdit-Mac/Documentation/SyntaxScopes/php/ScopeExamples.plist
@@ -2,14 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
+    <key>language.subroutine.method.special.php</key>
+    <string>__construct __clone</string>
     <key>language.variable</key>
     <string>$my_var</string>
     <key>string.here-doc</key>
     <string>&lt;&lt;&lt;EOT  something direct EOT;</string>
-    <key>support.function</key>
+    <key>support.subroutine.function</key>
     <string>htmlentities array_splice</string>
-    <key>support.method.special</key>
-    <string>__construct __clone</string>
     <key>markup.processing.languageswitch</key>
     <string>&lt;?php ?&gt;</string>
   </dict>
