--- a/SubEthaEdit-Mac/Modes/erlang.mode/Contents/Info.plist
+++ b/SubEthaEdit-Mac/Modes/erlang.mode/Contents/Info.plist
@@ -6,6 +6,9 @@
 	<string>SEEMode.Erlang</string>
 	<key>CFBundleName</key>
 	<string>Erlang</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>© 2014 TheCodingMonkeys
+http://www.codingmonkeys.de</string>
 	<key>CFBundleShortVersionString</key>
 	<string>4.0</string>
 	<key>CFBundleVersion</key>
