--- a/SubEthaEdit-Mac/Modes/CFML.mode/Contents/Info.plist
+++ b/SubEthaEdit-Mac/Modes/CFML.mode/Contents/Info.plist
@@ -7,13 +7,14 @@
 	<key>CFBundleName</key>
 	<string>CFML</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>© 2009</string>
+	<string>© 2014 TheCodingMonkeys
+http://www.codingmonkeys.de</string>
 	<key>CFBundleShortVersionString</key>
 	<string>4.0</string>
 	<key>CFBundleVersion</key>
 	<string>4.0</string>
 	<key>CFBundleGetInfoString</key>
-	<string>3.5, Copyright 2009</string>
+	<string>4.0, Copyright TheCodingMonkeys 2014</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
