--- a/SubEthaEdit-Mac/Modes/Wiki.mode/Contents/Info.plist
+++ b/SubEthaEdit-Mac/Modes/Wiki.mode/Contents/Info.plist
@@ -6,6 +6,9 @@
 	<string>4.0, Copyright TheCodingMonkeys 2014</string>
 	<key>CFBundleIdentifier</key>
 	<string>SEEMode.Wiki</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>© 2014 TheCodingMonkeys
+http://www.codingmonkeys.de</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
