--- a/SubEthaEdit-Mac/Modes/Ruby.mode/Contents/Info.plist
+++ b/SubEthaEdit-Mac/Modes/Ruby.mode/Contents/Info.plist
@@ -7,9 +7,10 @@
     <key>CFBundleName</key>
     <string>Ruby</string>
     <key>NSHumanReadableCopyright</key>
-    <string>TheCodingMonkeys - based on Jeff Reinecke's improvements over the original Mode</string>
+    <string>© 2014 TheCodingMonkeys
+http://www.codingmonkeys.de</string>
     <key>CFBundleGetInfoString</key>
-    <string>3.5.1</string>
+    <string>4.0, Copyright TheCodingMonkeys 2014</string>
     <key>CFBundleShortVersionString</key>
     <string>4.0</string>
     <key>CFBundleVersion</key>
