[CHANGE] Mode - ASP, JSP - added  SEEMinimumEngineVersion to the info.plist;

--- a/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Info.plist
+++ b/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Info.plist
@@ -14,6 +14,8 @@
     <string>4.0</string>
     <key>CFBundleVersion</key>
     <string>4.0</string>
+    <key>SEEMinimumEngineVersion</key>
+    <string>4.0</string>
     <key>CFBundlePackageType</key>
     <string>BNDL</string>
     <key>CFBundleInfoDictionaryVersion</key>
