--- a/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Info.plist
+++ b/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Info.plist
@@ -7,9 +7,10 @@
     <key>CFBundleName</key>
     <string>ASP-HTML</string>
     <key>NSHumanReadableCopyright</key>
-    <string>© Panic Inc. 2008, TCM 2011</string>
+    <string>© 2014 TheCodingMonkeys
+http://www.codingmonkeys.de</string>
     <key>CFBundleGetInfoString</key>
-    <string>3.6, © Panic Inc. 2008</string>
+    <string>4.0, Copyright TheCodingMonkeys 2014</string>
     <key>CFBundleShortVersionString</key>
     <string>4.0</string>
     <key>CFBundleVersion</key>
