--- a/SubEthaEdit-Mac/Modes/JSP-HTML.mode/Contents/Info.plist
+++ b/SubEthaEdit-Mac/Modes/JSP-HTML.mode/Contents/Info.plist
@@ -7,9 +7,10 @@
     <key>CFBundleName</key>
     <string>JSP-HTML</string>
     <key>NSHumanReadableCopyright</key>
-    <string>© 2008 Panic Inc.</string>
+    <string>© 2014 TheCodingMonkeys
+http://www.codingmonkeys.de</string>
     <key>CFBundleGetInfoString</key>
-    <string>© 2008 Panic Inc.</string>
+    <string>4.0, Copyright TheCodingMonkeys 2014</string>
     <key>CFBundleShortVersionString</key>
     <string>4.0</string>
     <key>CFBundleVersion</key>
