[CHANGE] ERB-HTML - updated Plist UTI Export;

--- a/SubEthaEdit-Mac/Info.plist
+++ b/SubEthaEdit-Mac/Info.plist
@@ -2885,6 +2885,7 @@
 				<key>public.filename-extension</key>
 				<array>
 					<string>rhtml</string>
+					<string>erb</string>
 				</array>
 			</dict>
 		</dict>
