--- a/SubEthaEdit-Mac/Info.plist
+++ b/SubEthaEdit-Mac/Info.plist
@@ -2459,6 +2459,7 @@
 			<dict>
 				<key>public.filename-extension</key>
 				<array>
+					<string>tex</string>
 					<string>latex</string>
 				</array>
 			</dict>
