--- a/SubEthaEdit-Mac/SubEthaEdit.entitlements
+++ b/SubEthaEdit-Mac/SubEthaEdit.entitlements
@@ -4,7 +4,13 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.files.user-selected.executable</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
+	<key>com.apple.security.files.bookmarks.app-scope</key>
+	<true/>
+	<key>com.apple.security.files.bookmarks.document-scope</key>
 	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
