[CHANGE] working towards a non-broken EncodingDoctor dialog

--- a/SubEthaEdit-Mac/SubEthaEdit.xcodeproj/xcshareddata/xcschemes/SubEthaEdit.xcscheme
+++ b/SubEthaEdit-Mac/SubEthaEdit.xcodeproj/xcshareddata/xcschemes/SubEthaEdit.xcscheme
@@ -100,7 +100,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-AppleLanguages (&apos;de&apos;)"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
