[CHANGE] switching back to beta to merge changes

--- a/BuildConfig/TCMReleaseInfo.xcconfig
+++ b/BuildConfig/TCMReleaseInfo.xcconfig
@@ -10,8 +10,8 @@
 
 TCM_APP_COPYRIGHT = © 2003-2014 TheCodingMonkeys. All rights reserved.
 
-TCM_APP_STYLE =
-TCM_APP_VERSION = 4.0
+TCM_APP_STYLE = BETA
+TCM_APP_VERSION = 4.0a2
 TCM_APP_GET_INFO = SubEthaEdit ${TCM_APP_VERSION}, ${TCM_APP_COPYRIGHT}
 
 TCM_CLT_VERSION = 1.2.1
