[FIX] see version argument

--- a/SubEthaEdit-Mac/SubEthaEdit.xcodeproj/xcshareddata/xcschemes/see.xcscheme
+++ b/SubEthaEdit-Mac/SubEthaEdit.xcodeproj/xcshareddata/xcschemes/see.xcscheme
@@ -63,8 +63,20 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "--print &quot;This is a Test&quot;"
+            argument = "--pipe-title &quot;This is a test&quot;"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--version"
             isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--print"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--launch"
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
